# doeff

./: .doeff-lint.jsonl  .gitignore  .pinjected-lint.toml  .pre-commit-config.yaml  .semgrep.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  None  ORCH_PROMPT.md  README.md  Untitled  VAULT  WORKFLOW.md  conftest.py  pyproject.toml  pyrightconfig.json  server.js
.agent-home/.claude/: .claude.json  config.json  settings.json
.claude/: settings.local.json
.github/workflows/: build-indexer.yml  build-vm.yml  doeff-vm-windows-wheel.yml  mirror-proboscis.yml  publish-vscode-extension.yml  publish.yml  python-compatibility.yml
.playwright-mcp/: page-2026-05-15T05-35-20-832Z.yml  page-2026-05-15T05-35-27-986Z.yml  page-2026-05-15T17-53-10-939Z.yml
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: kpc-macro-expansion.md
.sisyphus/evidence/: kpc-change-scope.txt  kpc-final-readiness.md  kpc-hang-baseline.md  kpc-macro-final-verification.md  kpc-negative-path-verification.txt  kpc-research-notes.md  kpc-targeted-verification.txt
.sisyphus/plans/: kpc-implementation-hang-fix.md  kpc-macro-expansion.md  kpc-spec-extraction.md
VAULT/: Dashboard.md  Development Flow.md  Index.md  NanoBanana.md  README.md
VAULT/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  types.json  workspace.json
VAULT/Bases/: Decisions.base  Designs.base  Features.base  Issues.base  Projects.base  References.base  Specs.base  Tasks.base
VAULT/Features/: FEAT-VSCODE-001-kleisli-buttons.md  FEAT-VSCODE-002-entrypoint-explorer.md
VAULT/Issues/: ISSUE-CI-001-python-compatibility-uv-workspace.md  ISSUE-CORE-401-program-yield-intercept-transform.md  ISSUE-CORE-402-reader-hashable-env-keys.md  ISSUE-CORE-403-type-stubs-out-of-sync.md  ISSUE-IDEA-001-intellij-run-lens-and-env-inspector.md  ISSUE-IDEA-002-pycharm-plugin-gradle-build-fails-tests.md  ISSUE-INDEXER-001-obsidian-impl-registry-generator.md
VAULT/Projects/: AGENTS-Linter-Migration.md  PROJECT-CORE-001-native-try-except.md  PROJECT-VSCODE-001-implicit-env-inspector.md
VAULT/Specs/: SPEC-CORE-001-native-try-except.md  SPEC-INDEXER-001-bundled-binary-distribution.md  SPEC-LINTER-001-agents-antipatterns.md  SPEC-VSCODE-001-implicit-env-inspector.md
VAULT/Tasks/: TASK-CI-001-python-compatibility-uv-workspace.md  (+40 more)
benchmarks/: README.md  benchmark_runner.py  benchmark_vm.py  pyvm_workloads.py  vm_dispatch_perf.py
docs/: 01-getting-started.md  02-core-concepts.md  03-basic-effects.md  04-async-effects.md  05-error-handling.md  06-io-effects.md  07-cache-system.md  08-graph-tracking.md  09-advanced-effects.md  10-pinjected-integration.md  11-kleisli-arrows.md  12-mcp-tools.md  12-patterns.md  13-api-reference.md  14-cli-auto-discovery.md  15-cli-script-execution.md  15-runtime-scheduler.md  16-run-program-api.md  17-effect-boundaries.md  17-semaphore-effects.md  17-workflow-observability.md  18-agent-session-management.md  18-effect-combinations.md  19-agent-tutorial.md  20-runtime-scheduler.md  20-why-effects-over-di.md  21-effects-matrix.md  21-semaphore-effects.md  22-capability-classes.md  22-with-intercept.md  MARKERS.md  MILESTONES.md  abstraction_concern.md  cache.md  cesk-implementation-status.md  cli-run-command-architecture.md  documentation-fix-table.md  doeff-2026-07-13-slog-semantics-architecture-plan.md  doeff-2026-07-14-agent-first-investment-architecture-plan.md  filesystem-effect-architecture.md  (+13 more)
docs/adr/: conftest.py  (+21 more)
doeff/: __init__.py  __main__.py  _collection_combinators.py  _types_internal.py  _vendor.py  cache.py  cache_policy.py  cesk.py  cesk_adapter.py  cesk_observability.py  cesk_traceback.py  core.py  core.pyi  decorators.py  do.py  do.pyi  effect_stack_trace.py  errors.py  graph_snapshot.py  handler_utils.py  handlers.py  interpreter.py  interpreter.pyi  interpreter.pyi.backup  interpreter_v2.py  iterator.py  kleisli.py  mcp.py  nonblocking_await.py  presets.py  program.py  program.pyi  result.py  run.py  run_record.py  run_services.py  runtime.py  runtimes.py  rust_vm.py  scheduler.py  (+7 more)
e2e/: zeus-e2e-20260228-235149.md  zeus-e2e-20260309-172656.md
examples/: custom_handlers.py  llm_multi_provider_stacking.py  marker_demo.py  marker_patterns.py  sample_entrypoints.py  traceback_demo.py  webui_demo.py  webui_demo_failure.py
issues/: ISSUE-CESK-001-remove-waiting-for-external-completion.md  ISSUE-CESK-006-implementation.md  ISSUE-CORE-489.md
notes/: resume-2026-02-09-perform-migration.md
publications/: README.md
rust/webui_snapshot/: Cargo.toml  pyproject.toml
rust/webui_snapshot/src/: lib.rs
scripts/: check-repo-hygiene.sh  install-opencode-spec-gap-tdd.sh  test-indexer-distribution.sh
specs/: IMPLEMENTATION_STATUS.md  SPEC-CESK-EFFECT-BOUNDARIES.md  SPEC-TYPES-001-program-effect-separation.md  indexer_findings.md
tests/: _run_helpers.py  bench_interpreter.py  cli_assets.py  conftest.py  test_adr_wiring_gate.py  test_architecture_violations.py  test_await_concurrency.py  test_await_http_memory.py  test_basic.py  test_benchmark_runner.py  test_bridge_program_yielding.py  test_cache.py  test_cache_await_spawn_hang.py  test_cache_handlers.py  test_cache_memo_rewriter_with_env.py  test_cache_memory_bisect.py  test_call_frame.py  test_cesk.py  test_cesk_building_blocks.py  test_cesk_error_handling.py  test_cesk_intercept.py  test_cesk_parallel.py  test_cesk_spawn.py  test_cesk_stack_safety.py  test_cesk_thread.py  test_cli_env_merge_with_program.py  test_cli_main.py  test_cli_run.py  test_comprehensive_stack_safety.py  test_core_effects.py  test_deep_handler.py  test_deftest_macro.py  test_discovery.py  test_dispatch_completion.py  test_do_bang_setv.py  test_do_decorator.py  test_do_methods.py  test_do_tail_resume_ast.py  test_do_varargs_unwrap.py  test_docs_withhandler_contract.py  (+101 more)
tmp/: IMPLEMENTATION_STATUS.md  architecture.md  fix_unused_args.py  fix_unused_args.pyi  migrate_tests.py  migrate_tests.pyi  test_display_default.py  test_indexer_api.py  test_runtime_traceback.py
tools/: test_python_versions.py  verify_dist_metadata.py
(+745 files in other folders)
