[project]
name = "doeff"
version = "0.1.9"
description = "Pragmatic do-notation and effects system for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kento Masui", email = "nameissoap@gmail.com"}
]
keywords = ["monad", "effects", "functional", "do-notation", "free-monad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "returns>=0.22.0",
    "cytoolz>=1.0.0",
    "frozendict>=2.4.0",
    "beartype>=0.19.0",
    "loguru>=0.7.0",
    "exceptiongroup>=1.2.0; python_version < '3.11'",
    "doeff-indexer>=0.1.2",
    "cloudpickle>=3.0.0",
    "phart>=1.1.4",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-auth>=2.40.3",
]

[project.optional-dependencies]
pinjected = ["doeff-pinjected; python_version < '3.14'"]
ray = ["ray>=2.0.0; python_version < '3.14'"]

[project.scripts]
doeff = "doeff.__main__:main"

[project.urls]
Homepage = "https://github.com/proboscis/doeff"
Repository = "https://github.com/proboscis/doeff"
Issues = "https://github.com/proboscis/doeff/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
doeff-pinjected = { workspace = true }
doeff-indexer = { workspace = true }
doeff-flow = { workspace = true }
doeff-agents = { workspace = true }
doeff-agentic = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: tests that exercise external integrations and may require real API keys",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = [
    "E501",  # line too long - handled by formatter
    "COM812",  # trailing comma
    "RET504",  # unnecessary assignment before return
    "PLR2004",  # magic value comparison
    "PLR0913",  # too many arguments
    "PT019",  # fixture without value - pre-existing in tests
    "E701",  # multiple statements on one line - pre-existing in tests
    "RUF005",  # list concatenation style - pre-existing in tests
    "ARG001",  # unused function argument - pre-existing in tests
    "ARG002",  # unused method argument - pre-existing in tests
]
external = ["PINJ"]

[tool.doeff-linter]
disable = ["DOEFF013"]  # Prefer Maybe Monad - intentionally using Optional/None patterns

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.24.0",
    "ray>=2.0.0; python_version < '3.14'",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pillow>=11.3.0",
    "beartype>=0.19.0",
]
