[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "webui_snapshot"
version = "0.1.0"
description = "Rust-accelerated snapshot builder for doeff web UI"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]
